# changes since the last release

  -- renamed QVAR to NQSRC to make it clear that this is the number of
     source terms for the primitive variable state.  We also fixed a
     number of places where QVAR was used instead of NQ.

  -- A new runtime parameter, T_guess, was created.  This is used as
     the initial temperature guess when calling the EOS with inputs
     other than rho, T, for the initial Newton iteration.

  -- The CTU hydrodynamics driver has been rewritten in C++
     (#498)

  -- The input parameter castro.do_ctu has been renamed
     castro.time_integration_method. The current legal values
     are 0 (CTU, the default) and 1 (MOL).

  -- fixed a bug in the ppm_temp_fix = 1 reconstruction -- we were not
     doing the initial reconstruction of temperature

# 19.02

  -- The flux limiter used with the options limit_fluxes_on_low_dens
     was not implemented correctly.  This has been fixed.  (PR #493)

  -- the CTU hydro solver no longer does any allocation in any of the
     support routines -- it is all done in the top-level
     driver. (#455)

  -- The CTU solver now makes explicit the range of cells looped over
     in the transverse routines (#456)

  -- The plotfile quantities divu and magvort were fixed in
     axisymmetric coordinates and diff_term was fixed in all
     geometries.  (#446, 448, 449, 472)

  -- abar is a new derived variable (#470)

  -- the job_info file now stores domain information (#451), and the
     job_info files is also stored in checkpoints now too (#450)

  -- we can now refine on enuc -- the nuclear energy generation rate.
     This is controlled by the parameters (in the &tagging probin
     namespace) enucerr, and max_enucerr_lev.  We also moved the dxnuc
     tagging parameters from inputs to probin, where they are now
     named dxnuc_min (formerly castro.dxnuc), dxnuc_max, and
     max_dxnuc_lev.  (#364, #437, #473)

  -- The diffusion cutoff now is a linear ramp instead of a