@@ -161,7 +161,7 @@ ifeq ($(USE_REACT_SPARSE_JACOBIAN), TRUE)
 endif
 
 ifeq ($(USE_SDC), TRUE)
-  DEFINES += -DSDC
+  DEFINES += -DSDC -DPRIM_SPECIES_HAVE_SOURCES
 endif
 
 ifeq ($(USE_DIFFUSION), TRUE)
