@@ -236,6 +236,9 @@ Castro::variableSetUp ()
   // and the auxiliary variables
   ca_get_nqaux(&NQAUX);
 
+  // and the number of primitive variable source terms
+  ca_get_nqsrc(&NQSRC);
+
   // initialize the Godunov state array used in hydro
   ca_get_ngdnv(&NGDNV);
 
