@@ -338,7 +338,8 @@ contains
                    un = q(i,j,k,QUN)
                    spzero = merge(-ONE, un*dtdx, un >= ZERO)
                    acmprght = HALF*(-ONE - spzero)*dq(i,j,k,n)
-                   qp(i,j,k,n) = q(i,j,k,n) + acmprght + HALF*dt*srcQ(i,j,k,n)
+                   qp(i,j,k,n) = q(i,j,k,n) + acmprght
+                   if (n <= NQSRC) qp(i,j,k,n) = qp(i,j,k,n) + HALF*dt*srcQ(i,j,k,n)
                 endif
 
                 ! Left state
@@ -347,11 +348,14 @@ contains
                 acmpleft = HALF*(ONE - spzero )*dq(i,j,k,n)
 
                 if (idir == 1 .and. i <= vhi(1)) then
-                   qm(i+1,j,k,n) = q(i,j,k,n) + acmpleft + HALF*dt*srcQ(i,j,k,n)
+                   qm(i+1,j,k,n) = q(i,j,k,n) + acmpleft
+                   if (n <= NQSRC) qm(i+1,j,k,n) = qm(i+1,j,k,n) + HALF*dt*srcQ(i,j,k,n)
                 else if (idir == 2 .and. j <= vhi(2)) then
-                   qm(i,j+1,k,n) = q(i,j,k,n) + acmpleft + HALF*dt*srcQ(i,j,k,n)
+                   qm(i,j+1,k,n) = q(i,j,k,n) + acmpleft
+                   if (n <= NQSRC) qm(i,j+1,k,n) = qm(i,j+1,k,n) + HALF*dt*srcQ(i,j,k,n)
                 else if (idir == 3 .and. k <= vhi(3)) then
-                   qm(i,j,k+1,n) = q(i,j,k,n) + acmpleft + HALF*dt*srcQ(i,j,k,n)
+                   qm(i,j,k+1,n) = q(i,j,k,n) + acmpleft
+                   if (n <= NQSRC) qm(i,j,k+1,n) = qm(i,j,k+1,n) + HALF*dt*srcQ(i,j,k,n)
                 endif
              enddo
 
