@@ -1,5 +1,11 @@
 # changes since the last release
 
+  -- By default, we no longer allocation storage for source terms to
+     species in the primitive variable state.  This is set via the
+     _variables file, parsed by set_variables.py.  To allow for
+     species sources, you need to set PRIM_SPECIES_HAVE_SOURCES.  This
+     is done currently for SDC.
+
   -- renamed QVAR to NQSRC to make it clear that this is the number of
      source terms for the primitive variable state.  We also fixed a
      number of places where QVAR was used instead of NQ.
